2005-06-20  Audrius Meskauskas <AudriusA@Bioinformatics.org>

        * org\omg\CORBA\PolicyListHolder.java,
        org\omg\CORBA\PolicyListHelper.java: New files.

2005-06-20  Lillian Angel  <langel@redhat.com>

	* javax/swing/DefaultDesktopManager
        (getBoundsForIconOf): No reason to check if desktopPane is null after         dereferencing desktopPane in code. Fixes bug #13461.

2005-06-20  Lillian Angel  <langel@redhat.com>

       * javax/swing/JScrollPane.java
        (JScrollPane): Viewport was not being set when 
        the view was null. Whenever a view would be added to container
        it would not appear. This was changed to use setViewportView.

2005-06-20  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractButton.java:
	* javax/swing/AbstractCellEditor.java:
	* javax/swing/Action.java:
	* javax/swing/BorderFactory.java:
	* javax/swing/ButtonGroup.java:
	* javax/swing/CellRendererPane.java:
	* javax/swing/DebugGraphics.java:
	* javax/swing/DefaultBoundedRangeModel.java:
	* javax/swing/DefaultButtonModel.java:
	* javax/swing/DefaultCellEditor.java:
	* javax/swing/DefaultComboBoxModel.java:
	* javax/swing/DefaultDesktopManager.java:
	* javax/swing/DefaultFocusManager.java:
	* javax/swing/DefaultListCellRenderer.java:
	* javax/swing/DefaultListModel.java:
	* javax/swing/DefaultListSelectionModel.java:
	* javax/swing/FocusManager.java:
	* javax/swing/GrayFilter.java:
	* javax/swing/ImageIcon.java:
	* javax/swing/JButton.java:
	* javax/swing/JCheckBoxMenuItem.java:
	* javax/swing/JColorChooser.java:
	* javax/swing/JComboBox.java:
	* javax/swing/JComponent.java:
	* javax/swing/JDesktopPane.java:
	Reformatted these sourcefiles to better match our coding style.

2005-06-20  Roman Kennke  <roman@kennke.org>

	* javax/swing/JComponent.java
	(getPreferredSize): Make sure that preferredSize is greater than
	minimumSize.
	(setMinimumSize): Removed hack to adjust preferredSize. This is moved
	into the method getPreferredSize().
